# RolandFP30xController

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: release.yml
docs/: midi_reference.md  packaging_store.md
packaging/windows/: AppxManifest.xml
scripts/: bootstrap_mas_build_env.sh  build_mas_pkg.sh  build_mas_store.sh  capture_piano_state.py  make_ico.py  make_msix_assets.py  mas-env.example  mas_embed_pyside6_bundle.py  probe_metronome_sysex.py  reset_connect_help_startup.py  svg_to_png.py
src/roland_fp30x_controller/: __init__.py  __main__.py  app.py
src/roland_fp30x_controller/midi/: __init__.py  bank_program_parser.py  client.py  messages.py  ports.py  rpn_parser.py  sysex_parser.py  tone_catalog.py
src/roland_fp30x_controller/ui/: __init__.py  i18n.py  main_window.py  midi_in_worker.py
tests/: test_bank_program_parser.py  test_messages.py  test_midi_out_client.py
