[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roland-fp30x-controller"
version = "0.1.0"
description = "Controlador de escritorio para Roland FP-30X (Qt + Python)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
roland-fp30x = "roland_fp30x_controller.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roland_fp30x_controller = ["resources/*.svg"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
